core. api-server: added payload input in POST APIs
