# core/api-server/models/task.go
@@ -20,11 +20,11 @@
  * author: Edoardo Spadoni <edoardo.spadoni@nethesis.it>
  */
 
-package models
+ package models
 
-import (
-	"time"
-)
+ import (
+	 "time"
+ )
 
 type Task struct {
 	ID        string      `json:"id" structs:"id"`
@@ -34,4 +34,10 @@ type Task struct {
 	User      string      `json:"user" structs:"user"`
 	Timestamp time.Time   `json:"timestamp" structs:"timestamp"`
 	Parent    string      `json:"parent" structs:"parent"`
+}
+
+type TaskJSON struct {
+	ID     string      `json:"id" structs:"id" example:"null"`
+	Action string      `json:"action" structs:"action" example:"list-modules"`
+	Data   interface{} `json:"data" structs:"data"`
 }
